Bug 455023 - Problem with "Last Used Views" mouse selection
Summary: Problem with "Last Used Views" mouse selection
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.1
Platform: Appimage Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-08 12:03 UTC by Pozsgay Máté
Modified: 2022-07-08 21:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pozsgay Máté 2022-06-08 12:03:30 UTC
SUMMARY
There is a strange/unexpected behavior of the "Last Used Views" function. Making a document selection by mouse doesn't trigger the active document switch upon the box is closed by releasing the CTRL key unless the whole line is selected.
This is probably an easy fix. I'm not familiar with QT, but probably there is a flag for that table component to select the whole line using mouse selection.

STEPS TO REPRODUCE
1. Open multiple document in Kate
2. Invoke "Last Used Views" function using keyboard shortcut
3. Select the document by clicking it with mouse

OBSERVED RESULT
Cell selected, document not switched

EXPECTED RESULT
Should change the active document at click, or at least upon the CTRL is released.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Ubuntu 22.04.4 LTS
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Workaround: Making a whole line selection using the mouse (or cursor keys afterwards) triggers the document switch.
Comment 1 Christoph Cullmann 2022-07-08 21:54:29 UTC
Git commit c46ea5bc8c49d6469a44bc09520d7327a8bad376 by Christoph Cullmann.
Committed on 08/07/2022 at 21:54.
Pushed by cullmann into branch 'master'.

fix document switching by clicking

one need to select the full row

M  +1    -1    addons/tabswitcher/tabswitcher.cpp

https://invent.kde.org/utilities/kate/commit/c46ea5bc8c49d6469a44bc09520d7327a8bad376