fix document switching by clicking

one need to select the full row

BUG: 455023